--- a/index.html
+++ b/index.html
@@ -280,6 +280,105 @@
     /* 语言显示模式（默认双语；如要加开关后面再加按钮即可） */
     [data-lang="cn-only"] .en { display: none; }
     [data-lang="en-only"] .cn { display: none; }
+
+    /* 弹窗里的拍照按钮 */
+    .photoBtn{
+      width: 100%;
+      border: 1px solid rgba(255,255,255,.14);
+      background: rgba(255,255,255,.06);
+      color: rgba(255,255,255,.92);
+      padding: 12px 12px;
+      border-radius: 14px;
+      font-size: 13px;
+      cursor: pointer;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .photoBtn:active{ transform: scale(.99); }
+    .photoNote{
+      margin-top: 10px;
+      color: rgba(255,255,255,.72);
+      font-size: 12px;
+      line-height: 1.45;
+    }
+
+    /* 全屏相机层 */
+    .cameraSheet{
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,.92);
+      z-index: 200;
+      display: none;
+      flex-direction: column;
+    }
+    .cameraSheet.show{ display: flex; }
+
+    .cameraTop{
+      padding: calc(10px + var(--safe-top)) 12px 10px;
+      display: grid;
+      grid-template-columns: 44px 1fr 44px;
+      align-items: center;
+      gap: 10px;
+    }
+    .camBtn{
+      width: 44px;
+      height: 44px;
+      border-radius: 14px;
+      border: 1px solid rgba(255,255,255,.14);
+      background: rgba(255,255,255,.06);
+      color: rgba(255,255,255,.92);
+      font-size: 18px;
+      cursor: pointer;
+    }
+    .camTitle{
+      text-align: center;
+      color: rgba(255,255,255,.85);
+      font-size: 13px;
+      line-height: 1.2;
+    }
+    .camTitle .en{ font-size: 12px; opacity: .85; }
+
+    .cameraStage{
+      position: relative;
+      flex: 1;
+      display: grid;
+      place-items: center;
+      overflow: hidden;
+      padding: 0 10px;
+    }
+
+    #camVideo{
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* 填满屏幕 */
+      border-radius: 18px;
+    }
+
+    .camFrame{
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* 相框按比例完整显示 */
+      pointer-events: none;
+      filter: drop-shadow(0 18px 40px rgba(0,0,0,.35));
+    }
+
+    .cameraBottom{
+      padding: 12px 12px calc(14px + var(--safe-bottom));
+      display: grid;
+      place-items: center;
+    }
+
+    .shutter{
+      width: 74px;
+      height: 74px;
+      border-radius: 999px;
+      border: 4px solid rgba(255,255,255,.85);
+      background: rgba(255,255,255,.12);
+      box-shadow: 0 12px 40px rgba(0,0,0,.35);
+      cursor: pointer;
+    }
+    .shutter:active{ transform: scale(.98); }
   </style>
 </head>
 
@@ -332,6 +431,42 @@
           <ul class="en" id="mIngEN"></ul>
         </div>
 
+        <div class="section">
+          <h3 class="cn">拍照留念</h3>
+          <h3 class="en">Photo</h3>
+
+          <button class="photoBtn" id="openCameraBtn" type="button">
+            <span class="cn">📸 打开相机（带相框）</span>
+            <span class="en">📸 Open camera with frame</span>
+          </button>
+
+          <p class="cn photoNote">提示：需要允许相机权限；iPhone 上会下载图片，或在新页长按保存。</p>
+          <p class="en photoNote">Tip: allow camera permission; on iPhone it downloads, or long-press to save.</p>
+        </div>
+
+      </div>
+      <!--相机全屏层 -->
+      <div class="cameraSheet" id="cameraSheet" aria-hidden="true">
+        <div class="cameraTop">
+          <button class="camBtn" id="camClose" type="button">✕</button>
+          <div class="camTitle">
+            <div class="cn">对准料理拍一张</div>
+            <div class="en">Frame your dish</div>
+          </div>
+          <button class="camBtn" id="camFlip" type="button">↺</button>
+        </div>
+
+        <div class="cameraStage">
+          <video id="camVideo" playsinline autoplay muted></video>
+          <!-- 你的相框叠在上面（透明 PNG） -->
+          <img id="camFrame" class="camFrame" src="camera-frame.png" alt="" />
+        </div>
+
+        <div class="cameraBottom">
+          <button class="shutter" id="camShot" type="button" aria-label="Shutter"></button>
+        </div>
+
+        <canvas id="camCanvas" style="display:none;"></canvas>
       </div>
     </div>
   </div>
@@ -459,6 +594,157 @@
     document.addEventListener("keydown", (e) => { if (e.key === "Escape") closeModal(); });
 
     renderGrid();
+
+      // ===== Camera with frame =====
+      let camStream = null;
+      let camFacingMode = "environment"; // 后摄像头优先
+
+      const cameraSheet = $("#cameraSheet");
+      const camVideo = $("#camVideo");
+      const camFrame = $("#camFrame");
+      const camCanvas = $("#camCanvas");
+
+      async function startCamera(){
+        // iOS/Safari：必须 https 或 localhost，且必须由用户点击触发
+        const constraints = {
+          audio: false,
+          video: {
+            facingMode: { ideal: camFacingMode },
+            width: { ideal: 1280 },
+            height: { ideal: 720 }
+          }
+        };
+
+        camStream = await navigator.mediaDevices.getUserMedia(constraints);
+        camVideo.srcObject = camStream;
+
+        // 等待视频尺寸就绪
+        await new Promise((resolve) => {
+          if (camVideo.readyState >= 2) return resolve();
+          camVideo.onloadedmetadata = () => resolve();
+        });
+
+        await camVideo.play();
+      }
+
+      function stopCamera(){
+        if (camStream){
+          camStream.getTracks().forEach(t => t.stop());
+          camStream = null;
+        }
+        camVideo.srcObject = null;
+      }
+
+      function openCameraUI(){
+        cameraSheet.classList.add("show");
+        cameraSheet.setAttribute("aria-hidden", "false");
+        // 防止背景滚动
+        document.body.style.overflow = "hidden";
+      }
+
+      function closeCameraUI(){
+        cameraSheet.classList.remove("show");
+        cameraSheet.setAttribute("aria-hidden", "true");
+        stopCamera();
+        document.body.style.overflow = "";
+      }
+
+      async function openCamera(){
+        try{
+          openCameraUI();
+          await startCamera();
+        }catch(err){
+          closeCameraUI();
+          alert(
+            "无法打开相机。\n" +
+            "请确认：\n" +
+            "1) 使用 https 或 localhost\n" +
+            "2) 已允许相机权限\n" +
+            "3) 浏览器支持 getUserMedia\n\n" +
+            "错误信息: " + (err?.message || err)
+          );
+        }
+      }
+
+      // 把 video 当前帧 + 相框合成到 canvas 并下载
+      async function captureWithFrame(){
+        // 以“画面显示尺寸”为基准输出（你也可以改成更高分辨率）
+        const rect = camVideo.getBoundingClientRect();
+        const outW = Math.round(rect.width * devicePixelRatio);
+        const outH = Math.round(rect.height * devicePixelRatio);
+
+        camCanvas.width = outW;
+        camCanvas.height = outH;
+
+        const ctx = camCanvas.getContext("2d");
+        ctx.clearRect(0,0,outW,outH);
+
+        // 1) 画视频帧：用 cover 逻辑填满输出
+        const vw = camVideo.videoWidth;
+        const vh = camVideo.videoHeight;
+
+        // cover：计算裁切
+        const videoAR = vw / vh;
+        const outAR = outW / outH;
+
+        let sx=0, sy=0, sw=vw, sh=vh;
+        if (videoAR > outAR){
+          // 视频更宽，裁左右
+          sh = vh;
+          sw = Math.round(vh * outAR);
+          sx = Math.round((vw - sw) / 2);
+        }else{
+          // 视频更高，裁上下
+          sw = vw;
+          sh = Math.round(vw / outAR);
+          sy = Math.round((vh - sh) / 2);
+        }
+
+        ctx.drawImage(camVideo, sx, sy, sw, sh, 0, 0, outW, outH);
+
+        // 2) 画相框（确保已加载）
+        if (!camFrame.complete){
+          await new Promise(res => camFrame.onload = () => res());
+        }
+        ctx.drawImage(camFrame, 0, 0, outW, outH);
+
+        // 3) 导出并下载
+        const blob = await new Promise(res => camCanvas.toBlob(res, "image/png", 1.0));
+        if (!blob) return;
+
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement("a");
+        const ts = new Date().toISOString().replace(/[:.]/g, "-");
+        a.href = url;
+        a.download = `Lantern-Feast-${ts}.png`;
+        document.body.appendChild(a);
+        a.click();
+        a.remove();
+        URL.revokeObjectURL(url);
+      }
+
+      // 绑定按钮（弹窗内）
+      $("#openCameraBtn").addEventListener("click", openCamera);
+
+      // 相机层按钮
+      $("#camClose").addEventListener("click", closeCameraUI);
+
+      $("#camFlip").addEventListener("click", async () => {
+        camFacingMode = (camFacingMode === "environment") ? "user" : "environment";
+        // 切换摄像头：重启 stream
+        stopCamera();
+        try{
+          await startCamera();
+        }catch(err){
+          alert("切换摄像头失败: " + (err?.message || err));
+        }
+      });
+
+      $("#camShot").addEventListener("click", async () => {
+        // 拍照时给一点触感
+        if (navigator.vibrate) navigator.vibrate(12);
+        await captureWithFrame();
+      });
   </script>
 </body>
 </html>
