updated dish names and info

--- a/index.html
+++ b/index.html
@@ -524,43 +524,43 @@
     const dishes = [
       { cn:"照烧牛排", en:"Teriyaki Steak",
         tags:[{cn:"热菜",en:"Hot dish"}],
-        desc:{cn:"一口热烈的开场——香气先到，余味回甘。", en:"A bold opening bite—aroma first, with a clean finish."},
+        desc:{cn:"酱香微甜，肉质柔嫩。", en:"Savory-sweet glaze, tender and juicy."},
         ingredients:{cn:["照烧酱","牛肉"], en:["teriyaki sauce","beef"]},
       },
       { cn:"香菜蘸水", en:"Chinese Cilantro Dipping Sauce",
         tags:[{cn:"蘸酱",en:"Sauce"}],
-        desc:{cn:"清爽过渡，像灯影掠过汤面。", en:"A refreshing interlude—like lantern light skimming the surface."},
-        ingredients:{cn:["香菜","___"], en:["cilantro"]},
+        desc:{cn:"清香辛爽，一抹提味。", en:"Fresh, bright, and instantly elevating."},
+        ingredients:{cn:["香菜","葱花","大蒜","芝麻","花椒"], en:["cilantro","scallion","garlic","sesame","Sichuan peppercorn"]},
       },
-      { cn:"贵川烧椒牛油果酱拌皮蛋", en:"Century Egg with Charred Chili and Avocado Guacamole",
+      { cn:"贵川烧椒牛油果酱拌皮蛋", en:"Guizhou–Sichuan Roasted Chili Avocado with Century Egg",
         tags:[{cn:"前菜",en:"Appetizer"}],
-        desc:{cn:"慢火把香气收进汤汁里。", en:"Slow heat concentrates aroma into the sauce."},
+        desc:{cn:"烟辣与绵滑的碰撞。", en:"Smoky heat meets creamy richness.."},
         ingredients:{cn:["番茄","青椒","牛油果","烧椒酱","皮蛋"], en:["tomato","green pepper","avocado","roasted chili sauce","century egg"]},
       },
-      { cn:"意式沙拉", en:"Italian Salad",
+      { cn:"白吉馍", en:"Baiji Flatbread",
+        tags:[{cn:"主食",en:"Staple"}],
+        desc:{cn:"外酥内软，朴实有力。", en:"Crisp outside, soft within."},
+        ingredients:{cn:["小麦粉","棕榈油","水","酵母"], en:["wheat flour","palm oil","water","yeast"]},
+      },
+      { cn:"上汤时蔬", en:"Seasonal Greens in Superior Broth",
+        tags:[{cn:"蔬菜",en:"Vegetable"}],
+        desc:{cn:"清润鲜甜，温柔入味.", en:"Light, delicate, and deeply comforting."},
+        ingredients:{cn:["时令蔬菜","清汤"], en:["greens","broth"]},
+      },
+      { cn:"卷心菜芝麻沙拉", en:"Cabbage Sesame Salad",
         tags:[{cn:"沙拉",en:"Salad"}],
-        desc:{cn:"柔软、微甜、带一点烟火气。", en:"Soft, gently sweet, with a whisper of smoky warmth."},
-        ingredients:{cn:["____"], en:["____"]},
+        desc:{cn:"脆爽清香，芝麻添润。", en:"Crisp and refreshing with a nutty sesame finish."},
+        ingredients:{cn:["卷心菜","芝麻","沙拉酱"], en:["cabbage","sesame","salad dressing"]},
       },
-      { cn:"什千三侯胙菱橘", en:"Citrus & Savory Medley",
-        tags:[{cn:"酸甜",en:"Sweet-tart"}],
-        desc:{cn:"果香把厚重托起来，吃完更想再来一口。", en:"Citrus lifts richness—keeps you reaching for another bite."},
-        ingredients:{cn:["____"], en:["____"]},
+      { cn:"烤迷你土豆", en:"Roasted Mini Potatoes",
+        tags:[{cn:"主食",en:"Staple"}],
+        desc:{cn:"外脆内糯，香气四溢。", en:"Crisp edges, fluffy center."},
+        ingredients:{cn:["土豆","橄榄油","盐","黑胡椒"], en:["potato","olive oil","salt","black pepper"]},
       },
-      { cn:"参才仕少澄桂旨", en:"Ginseng · Osmanthus Clarity",
-        tags:[{cn:"清口",en:"Palette cleanser"}],
-        desc:{cn:"清透收尾，甜香不腻。", en:"A clean finish—floral sweetness without heaviness."},
-        ingredients:{cn:["____"], en:["____"]},
-      },
-      { cn:"昀尽雪土揉戎在", en:"Snow-Soil Fold · Rustic Notes",
-        tags:[{cn:"限定",en:"Special"}],
-        desc:{cn:"带点野趣的香气，越嚼越香。", en:"Rustic aromatics that deepen as you chew."},
-        ingredients:{cn:["____"], en:["____"]},
-      },
-      { cn:"电饺蕾门熟朔花", en:"Glow Dumplings · Blooming Finish",
-        tags:[{cn:"甜品",en:"Dessert"},{cn:"元宵",en:"Tangyuan"}],
-        desc:{cn:"团圆的最后一口：软糯、温热、甜得刚刚好。", en:"The last bite of reunion—soft, warm, and just sweet enough."},
-        ingredients:{cn:["____"], en:["____"]},
+      { cn:"焙茶红豆汤圆曲奇", en:"Hojicha & Red Bean Tangyuan Cookies",
+        tags:[{cn:"甜品",en:"Dessert"},{cn:"元宵限定",en:"Festival Special"}],
+        desc:{cn:"茶香温润，红豆绵甜。", en:"Toasty hojicha aroma with gentle red bean sweetness."},
+        ingredients:{cn:["低筋面粉","黄油","糖","焙茶粉","红豆汤圆"], en:["cake flour","butter","sugar","hojicha powder","red bean Tangyuan"]},
       }
     ];
 
