changed veggie dish

--- a/index.html
+++ b/index.html
@@ -542,10 +542,10 @@
         desc:{cn:"外酥内软，朴实有力。", en:"Crisp outside, soft within."},
         ingredients:{cn:["小麦粉","棕榈油","水","酵母"], en:["wheat flour","palm oil","water","yeast"]},
       },
-      { cn:"上汤时蔬", en:"Seasonal Greens in Superior Broth",
+      { cn:"鲜菇扒时蔬", en:"Braised Seasonal Greens with Fresh Mushrooms",
         tags:[{cn:"蔬菜",en:"Vegetable"}],
-        desc:{cn:"清润鲜甜，温柔入味.", en:"Light, delicate, and deeply comforting."},
-        ingredients:{cn:["时令蔬菜","清汤"], en:["greens","broth"]},
+        desc:{cn:"菌香清润，蔬色鲜亮。", en:"Earthy mushrooms with bright seasonal greens."},
+        ingredients:{cn:["时令蔬菜","菌菇"], en:["greens","mushroom"]},
       },
       { cn:"卷心菜芝麻沙拉", en:"Cabbage Sesame Salad",
         tags:[{cn:"沙拉",en:"Salad"}],
